--- a/web/app/templates/components/register-card.hbs
+++ b/web/app/templates/components/register-card.hbs
@@ -6,7 +6,7 @@
   <div class="row">
     {{x-input
       value=model.username
-      errors=(v-get model 'username' 'messages')
+      errors=validations.attrs.model.username.messages
       classNames='col s12'
       type='email'
       label='Username'}}
@@ -14,7 +14,7 @@
   <div class="row">
     {{x-input
       value=model.email
-      errors=(v-get model 'email' 'messages')
+      errors=validations.attrs.model.email.messages
       classNames='col s12'
       type='email'
       label='Email'}}
@@ -22,7 +22,7 @@
   <div class="row">
     {{x-input
       value=model.password
-      errors=(v-get model 'password' 'messages')
+      errors=validations.attrs.model.password.messages
       classNames='col s12'
       type='password'
       label='Password'}}
@@ -30,7 +30,7 @@
   <div class="row">
     {{x-input
       value=model.passwordConfirmation
-      errors=(v-get model 'passwordConfirmation' 'messages')
+      errors=validations.attrs.model.passwordConfirmation.messages
       classNames='col s12'
       type='password'
       label='Confirm Password'}}
